--- a/.env.example
+++ b/.env.example
@@ -35,5 +35,11 @@ PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
 
+SU_NAME=Name
+SU_SURNAME=Surname
+SU_PATRONYMIC=patronymic
+SU_EMAIL=example@mail.ru
+SU_PASSWORD=123456
+
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
