--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "buzz/laravel-google-captcha": "^2.1",
         "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "5.7.*",
+        "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0"
     },
     "require-dev": {
